[package]
name = "battlesnake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
petgraph = "*"
